docker/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hybridphp
  labels:
    name: hybridphp
    app.kubernetes.io/name: hybridphp
    app.kubernetes.io/version: "1.0.0"
